--- a/src/main/resources/templates/reg2_userType.html
+++ b/src/main/resources/templates/reg2_userType.html
@@ -25,6 +25,10 @@
         <a  href="/kjoper"><p class="continueButtons">Kjøpe dyr</p></a>
         <a href="/nyttdyr"><p class="continueButtons">Selge dyr</p></a>
     </div>
+
+    <div class="preferanceImg">
+        <img src="image/paw.png" alt="">
+    </div>
 </body>
 
 </html>
