Aligned tekst and added checkbox on reg-site

--- a/src/main/resources/templates/intropage.html
+++ b/src/main/resources/templates/intropage.html
@@ -37,7 +37,7 @@
 
 </div>
 <div class="introTekst">
-    <p>PetMatch er en tjeneste som knytter nye eier opp mot dyr som av ulike grunner har behov for omplassering
+    <p>PetMatch er en tjeneste som knytter nye eiere opp mot dyr som av ulike grunner har behov for omplassering
     </p>
 </div>
 <!-------- LOGIN/SIGNUP -------->
