--- a/src/main/resources/static/stylesheet.css
+++ b/src/main/resources/static/stylesheet.css
@@ -30,6 +30,7 @@ header {
     flex-direction: column;
     margin: 0 18%;
     max-width: 100%;
+    text-align: center;
 }
 
 
@@ -40,6 +41,8 @@ input {
     border: 0.5px solid grey;
     padding: 10px;
 }
+
+
 
 ::placeholder {
     color: #ff914d;
@@ -184,6 +187,18 @@ a, a:link:active, a:visited:active {
     margin-bottom: 0;
     margin-top: 35px;
     font-size: 14px;
+}
+
+.checkboxRegistration {
+    text-align: center;
+}
+
+input#NL {
+    margin: 0%;
+}
+
+input#ToS {
+    margin: 0%;
 }
 
 /*-------- animalProfile STYLING ---------*/
