--- a/src/main/resources/static/stylesheet.css
+++ b/src/main/resources/static/stylesheet.css
@@ -514,3 +514,17 @@ a, a:link:active, a:visited:active {
     width: 50px;
 }
 
+.error {
+    border-style: solid;
+    border-color: red;
+}
+
+.errorText {
+    color: red;
+    font-size: 10px;
+}
+
+input:focus {
+    outline: none;
+}
+
