--- a/src/main/resources/templates/sellersAnimalsView.html
+++ b/src/main/resources/templates/sellersAnimalsView.html
@@ -39,7 +39,7 @@
 <div class="menu" th:include="templates :: menu"></div>
 
 <div>
-    <a th:href="'/nyttdyr'"><input class="continueButtons" type="submit" value="Legg til et nytt dyr"></a>
+    <a th:href="'/leggtil'"><input class="continueButtons" type="submit" value="Legg til et nytt dyr"></a>
 
 </div>
 
