--- a/src/main/resources/static/indexHB.css
+++ b/src/main/resources/static/indexHB.css
@@ -33,9 +33,8 @@
 }
 
 .optionType {
-    display: block;
-    margin: 20px;
-    margin-left: 50px;
+    display: flex;
+    margin: 10px 40px;
 }
 
 .imgOption {
@@ -57,19 +56,21 @@
 
 .option {
     display: inline-block;
-    margin: 5px;
-    padding: 15px;
     border: 1px solid grey;
     border-radius: 20px;
+    padding: 14px;
+    font-size: 14px;
+    margin-right: 10px;
 }
 
 .activeOption {
     display: inline-block;
-    margin: 5px;
-    padding: 15px;
+    padding: 14px;
     background-color: bisque;
     border: 1px solid orange;
     border-radius: 20px;
+    margin-right: 10px;
+    font-size: 14px;
 }
 
 .preferanceOptions {
@@ -95,12 +96,16 @@
 }
 
 .imageDiv {
-    margin-left: 26%;
-    display: table;
 }
 
 .optionItem {
-    display: inline-block;
+    display: flex;
+    font-size: 14px;
+}
+.rightAlignText {
+    flex: 1;
+    font-size: 14px;
+    align-items: center;
 }
 
 textarea {
@@ -112,6 +117,11 @@ textarea {
     height: 100px;
     border: 0.5px solid grey;
     border-radius: 15px;
+}
+
+.textOption {
+    font-size: 14px;
+    padding: 14px;
 }
 
 #sellerForm input {
@@ -157,4 +167,11 @@ select {
 
 .optionItem:hover, .optionImg:hover, input:hover, textarea:hover, select:hover {
     cursor: pointer;
+}
+
+.optionTypeCatDog {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 12px;
 }
