--- a/src/main/resources/templates/reg4_buyer.html
+++ b/src/main/resources/templates/reg4_buyer.html
@@ -28,7 +28,7 @@
         <input type="hidden" id="hasChildrenOption" th:field="*{hasChildren}">
 
         <div id="buyerOptions" class="showOptions">
-            <div class="optionType" id="animalOption">
+            <div class="optionTypeCatDog" id="animalOption">
                 <p class="optionItem">Hvordan dyr er du på utkikk etter?</p>
                 <div class="imageDiv">
                     <img id="DOG" src="image/dogIcon.png" alt="Hund" class="imgActiveOption optionImg">
@@ -44,7 +44,7 @@
 
                 <select name="municipality">
                     <label>Hvor bor du?</label>
-                    <option value="" selected disabled hidden>Velg fylke</option>
+                    <option class="textInput" value="" selected disabled hidden>Velg fylke</option>
                     <option th:each="municipality : ${T(com.example.demo.Municipality).values()}"
                             th:value="${municipality}" th:text="${municipality.displayValue}"></option>
                 </select>
@@ -52,21 +52,21 @@
             </div>
 
             <div class="optionType" id="homeType">
-                <p class="optionItem">Bopel:</p>
-                <p id="APARTMENT" class="activeOption optionItem">Leilighet</p>
-                <p id="HOUSE" class="option optionItem">Hus</p>
+                <p class="optionItem rightAlignText">Bopel:</p>
+                <p id="APARTMENT" class="activeOption optionItem textOption">Leilighet</p>
+                <p id="HOUSE" class="option optionItem textOption">Hus</p>
             </div>
 
             <div class="optionType">
-                <p class="optionItem">Hatt dyr tidligere:</p>
-                <p id="yesPrevious" class="activeOption optionItem">Ja</p>
-                <p id="noPrevious" class="option optionItem">Nei</p>
+                <p class="optionItem rightAlignText">Hatt dyr tidligere:</p>
+                <p id="yesPrevious" class="activeOption optionItem textOption">Ja</p>
+                <p id="noPrevious" class="option optionItem textOption">Nei</p>
             </div>
 
             <div class="optionType">
-                <p class="optionItem">Barn i husstanden:</p>
-                <p id="yesChildren" class="activeOption optionItem">Ja</p>
-                <p id="noChildren" class="option optionItem">Nei</p>
+                <p class="optionItem rightAlignText">Barn i husstanden:</p>
+                <p id="yesChildren" class="activeOption optionItem textOption">Ja</p>
+                <p id="noChildren" class="option optionItem textOption">Nei</p>
             </div>
         </div>
         <input class="continueButtons" type="submit" value="Fortsett">
