--- a/src/main/resources/templates/sellersAnimalsView.html
+++ b/src/main/resources/templates/sellersAnimalsView.html
@@ -33,16 +33,15 @@
             <img class="heartAmount" src="/image/redHeart.png" alt="">
         </div>
     </div>
+
+    <div class="buttonContainer">
+        <a th:href="'/leggtil'"><input class="continueButtons" type="submit" value="Legg til et nytt dyr"></a>
+    </div>
 </div>
+
 
 <!-------- MENU -------->
 <div class="menu" th:include="templates :: menu"></div>
-
-<div>
-    <a th:href="'/leggtil'"><input class="continueButtons" type="submit" value="Legg til et nytt dyr"></a>
-
-</div>
-
 
 
 </body>
