--- a/src/main/resources/static/indexHB.css
+++ b/src/main/resources/static/indexHB.css
@@ -89,6 +89,8 @@
     margin-left: auto;
     margin-right: auto;
     display: block;
+
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .buyerOptions {
