--- a/src/main/resources/templates/sellersAnimalsView.html
+++ b/src/main/resources/templates/sellersAnimalsView.html
@@ -29,7 +29,7 @@
         </a>
 
         <div id="textIconContainer">
-            <p th:text="${eachAnimal.name + ' ' + eachAnimal.age + ' år'}">Kira</p>
+            <p class="sellerViewText" th:text="${eachAnimal.name + ' ' + eachAnimal.age + ' år'}">Kira</p>
             <img class="heartAmount" src="/image/redHeart.png" alt="">
         </div>
     </div>
