--- a/src/main/resources/templates/buyerAllAnimalsView.html
+++ b/src/main/resources/templates/buyerAllAnimalsView.html
@@ -24,7 +24,7 @@
         <div class="animalMatchesPicIcon">
             <a th:href="'/animalProfile/' + ${eachAnimal.id}">
                 <img class="animalMatchesPic" th:src="${eachAnimal.getAnimalImg1()}" alt="">
-                <p class="animalMatchesTextStyle" th:text="${eachAnimal.name}">Kira</p>
+                <p class="animalMatchesTextStyle" th:text="${eachAnimal.name} + ' ' + ${eachAnimal.age} + ' år'">Kira</p>
             </a>
 
             <div th:if="${matchedAnimals.contains(eachAnimal)}">
