--- a/src/main/resources/templates/sellersAnimalLikes.html
+++ b/src/main/resources/templates/sellersAnimalLikes.html
@@ -64,7 +64,7 @@
 </div>
 
 <p th:if="${matchedUsers.isEmpty()}" class="textSeller" th:text="'Venter på matcher... '"></p>
-<p th:unless="${matchedUsers.isEmpty()}" class="textSeller" th:text="'personer liker ' + ${animal.name}"></p>
+<p th:unless="${matchedUsers.isEmpty()}" class="textSeller" th:text="${#lists.size(matchedUsers)} + ' personer liker ' + ${animal.name}"></p>
 
 
 <!-------- BUYER INFO -------->
