--- a/src/main/resources/templates/reg3_newAnimal2.html
+++ b/src/main/resources/templates/reg3_newAnimal2.html
@@ -30,7 +30,7 @@
 
         <div id="sellerOptions" class="showOptions">
             <div class="optionType" id="animalOption">
-                <p class="optionItem">Hvordan dyr er det?</p>
+                <p class="optionItem">Hund eller katt?</p>
                 <div class="imageDiv">
                     <img id="DOG" src="image/dogIcon.png" alt="Hund" class="imgActiveOption optionImg">
                     <img id="CAT" src="image/catIconGrey.png" alt="Katt" class="imgOption optionImg">
