changed header text

--- a/src/main/resources/templates/reg3_newAnimal2.html
+++ b/src/main/resources/templates/reg3_newAnimal2.html
@@ -13,7 +13,7 @@
     <!-------- HEADER -------->
     <header>
         <div class="headerNyBruker">
-            <p id="headerLoginTekst">Legg til et nytt dyr</p>
+            <p id="headerLoginTekst">Legg til dyr</p>
         </div>
     </header>
 
