--- a/src/main/resources/templates/reg4_buyer.html
+++ b/src/main/resources/templates/reg4_buyer.html
@@ -13,7 +13,7 @@
 <!-------- HEADER -------->
 <header>
     <div class="headerNyBruker">
-        <p id="headerLoginTekst">Fyll ut</p>
+        <p id="headerLoginTekst">Dine preferanser</p>
     </div>
 </header>
 
