--- a/src/main/resources/static/stylesheet.css
+++ b/src/main/resources/static/stylesheet.css
@@ -101,10 +101,13 @@ a, a:link:active, a:visited:active {
 
 .prefIcons {
     width: 50px;
+    height: 50px;
+    object-fit: contain;
 }
 
 .prefIconsKas {
     width: 37px;
+    height: 37px;
     object-fit: contain;
 }
 
