--- a/src/main/resources/static/stylesheet.css
+++ b/src/main/resources/static/stylesheet.css
@@ -341,11 +341,13 @@ input#ToS {
 .editCameraUser{
     display: flex;
     justify-content: center;
+    align-items: center;
     color: black;
 }
 
 .editIcon {
     width: 24px;
+    height: 24px;
     object-fit: contain;
 }
 
@@ -557,15 +559,21 @@ input#ToS {
 
 .sellerViewText {
     padding-left: 50px;
-    padding-top: 7px;
+    padding-top: 8px;
     margin: 0;
 }
 
 .heartAmount {
     width: 50px;
+    height: 50px;
+}
+
+#countLikesHeartDiv{
+    display: flex;
+    align-items: center;
     position: absolute;
-    right: 85px;
-    bottom: 3px;
+    right: 43px;
+    bottom: 5px;
 }
 
 .error {
